= 2.0.0.75 =
* Longitude validation fails to validate longitude with minus sign - FIXED
* Static map loads Google Map API even OSM API is enabled - FIXED
* Show formatted post date & post modified date in a badge - ADDED

= 2.0.0.74 =
* Ninja Forms bug can cause PHP warnings on search page - TEMP FIX ADDED
* Map marker popup is not working for non-logged users with WP 5.3.1 - FIXED

= 2.0.0.72 =
* REST API rating stars & images upload not working - ADDED
* Elementor archive title element not rendering correct title on GD pages - FIXED
* Not able to setup GD search page with recent Divi page builder - FIXED
* JS variable conflict with Rank Math plugin - FIXED
* Listing details shows wrong sidebar on Avada FusionBuilder - FIXED
* Map marker popup not working for non-logged users when WPEngine cache is enabled - FIXED
* Post content shortcode looping when Newspaper theme & tagDiv addons active - FIXED
* Ninja Forms bug can cause PHP warnings to show in API response which can break some maps functionality - TEMP FIX ADDED

= 2.0.0.70 =
* REST API allow search posts by GPS, IP and near address - ADDED
* GD Search Themer Layout overwrites the WordPress search page - FIXED
* Decode special character in email title - FIXED
* Limit embed wrap to videos - CHANGED

= 2.0.0.69 =
* Fixed some W3 validation issues - FIXED
* Admin tooltips can break image upload buttons - FIXED

= 2.0.0.68 =
* Validate register user during add listing from frontend - FIXED
* Enfold theme default layout & sidebar settings is not working - FIXED
* WPML translation not working for strings defined via variable - FIXED
* Custom field date shows un-translated date - FIXED
* Option added to set post images widget title - ADDED
* Option added in map widget/shortcode to tick/untick categories on the map - ADDED
* Exclude GD template pages from Yoast XML page sitemap - ADDED
* Rank Math SEO not detecting GD fields - FIXED
* Add listing by logged out user not working in incognito mode - FIXED