@@ -2,6 +2,7 @@
 * Longitude validation fails to validate longitude with minus sign - FIXED
 * Static map loads Google Map API even OSM API is enabled - FIXED
 * Show formatted post date & post modified date in a badge - ADDED
+* Twenty Twenty theme show 404 when no results found on search page - FIXED
 
 = 2.0.0.74 =
 * Ninja Forms bug can cause PHP warnings on search page - TEMP FIX ADDED
